// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVault - upgrade does not modify the state variables 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 105695,
}
`;

exports[`EthVault - upgrade does not modify the state variables 2`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 105909,
}
`;

exports[`EthVault - upgrade does not modify the state variables 3`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 105799,
}
`;

exports[`EthVault - upgrade does not modify the state variables 4`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 106364,
}
`;

exports[`EthVault - upgrade does not modify the state variables 5`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 106578,
}
`;

exports[`EthVault - upgrade does not modify the state variables 6`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 106468,
}
`;

exports[`EthVault - upgrade does not modify the state variables 7`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 105786,
}
`;

exports[`EthVault - upgrade works with valid call data 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 76331,
}
`;
